template da senha redefinida

--- a/templates/forgot-password-email.html
+++ b/templates/forgot-password-email.html
@@ -10,7 +10,9 @@
         <h3>Olá, {{nome}},</h3>
         <p>Você solicitou uma redefinição de senha, use este <a href="{{url}}">link</a> para redefinir sua senha</p>
         <br>
-        <p>Obrigado!</p>
+        <div>
+            <p>Obrigado!</p>
+        </div>
     </div>
 </body>
 
