alterando template e limpando o arquivo forgot

--- a/templates/reset-password-email.html
+++ b/templates/reset-password-email.html
@@ -7,7 +7,7 @@
 
 <body>
     <div>
-        <h3>Olá {{nome}},</h3>
+        <h3>Olá {{name}},</h3>
         <p>Sua senha foi redefinida com sucesso! Você já pode fazer login com a sua nova senha.</p>
         <br>
         <div>
