--- a/templates/forgot-password-email.html
+++ b/templates/forgot-password-email.html
@@ -7,7 +7,7 @@
 
 <body>
     <div>
-        <h3>Olá, {{nome}},</h3>
+        <h3>Olá {{name}},</h3>
         <p>Você solicitou uma redefinição de senha, use este <a href="{{url}}">link</a> para redefinir sua senha</p>
         <br>
         <div>
