melhorando a pagina forgot

--- a/templates/forgot-password-email.html
+++ b/templates/forgot-password-email.html
@@ -2,18 +2,44 @@
 <html>
 
 <head>
-    <title>Esqueci a senha | E-mail</title>
+    <title>Doutor Vida - Redefinição de senha</title>
+    <meta http-equiv="Content-Type" content="text/html">
 </head>
 
-<body>
-    <div>
-        <h3>Olá {{name}},</h3>
-        <p>Você solicitou uma redefinição de senha, use este <a href="{{url}}">link</a> para redefinir sua senha</p>
-        <br>
-        <div>
-            <p>Obrigado!</p>
-        </div>
-    </div>
+<body bgcolor="#ffffff">
+    <table bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0" width="580">
+        <tbody>
+            <tr>
+                <td colspan="3">
+                    <h3>Doutor Vida</h3>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <h5>Solicitação de Redefinição de senha</h5>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+
+                </td>
+            </tr>
+            <tr>
+                <td style="color: #444545; font-family: Arial, Helvetica, sans-serif; font-size: 12px">
+                    <p style="line-height: 22px">
+                        Olá <b>{{name}},</b> conforme solicitado, segue as instruções para redefinição de senha.
+                    </p>
+                    <p style="line-height: 22px">
+                        Para prosseguir com a redefinição da sua senha, clique no link e siga as instruções.
+                        <br>
+                        <a href="{{url}}"
+                            style="color: #ff6f0b; font-family: Arial, Helvetica, sans-serif; font-size: 12px">Clique
+                            aqui</a>
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
