melhorando o template do email de redefinição

--- a/templates/forgot-password-email.html
+++ b/templates/forgot-password-email.html
@@ -11,12 +11,12 @@
         <tbody>
             <tr>
                 <td colspan="3">
-                    <h3>Doutor Vida</h3>
+                    <img src="https://i.ibb.co/8mQDndC/cabecalho.png" alt="cabecalho" border="0">
                 </td>
             </tr>
             <tr>
                 <td colspan="3">
-                    <h5>Solicitação de Redefinição de senha</h5>
+                    <img src="https://i.ibb.co/G9SMS6f/titulo.png" alt="titulo" border="0">
                 </td>
             </tr>
             <tr>
@@ -25,17 +25,28 @@
                 </td>
             </tr>
             <tr>
-                <td style="color: #444545; font-family: Arial, Helvetica, sans-serif; font-size: 12px">
+                <td style="color: #444545; font-family: Arial, Helvetica, sans-serif; font-size: 16px">
                     <p style="line-height: 22px">
                         Olá <b>{{name}},</b> conforme solicitado, segue as instruções para redefinição de senha.
                     </p>
                     <p style="line-height: 22px">
                         Para prosseguir com a redefinição da sua senha, clique no link e siga as instruções.
                         <br>
+                        <br>
                         <a href="{{url}}"
-                            style="color: #ff6f0b; font-family: Arial, Helvetica, sans-serif; font-size: 12px">Clique
+                            style="color: #239525; font-family: Arial, Helvetica, sans-serif; font-size: 12px; margin-left: 225px">Clique
                             aqui</a>
                     </p>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <img src="https://i.ibb.co/kQ48MPN/desconsidere.png" alt="desconsidere" border="0">
                 </td>
             </tr>
         </tbody>
@@ -43,3 +54,7 @@
 </body>
 
 </html>
+
+<!-- https://ibb.co/zmthW7M
+https://ibb.co/KF2qm8T
+https://ibb.co/9h545Dm -->
