--- a/templates/reset-password-email.html
+++ b/templates/reset-password-email.html
@@ -2,18 +2,37 @@
 <html>
 
 <head>
-    <title>Redefinição de senha</title>
+    <title>Doutor Vida - Redefinição de senha</title>
+    <meta http-equiv="Content-Type" content="text/html">
 </head>
 
-<body>
-    <div>
-        <h3>Olá {{name}},</h3>
-        <p>Sua senha foi redefinida com sucesso! Você já pode fazer login com a sua nova senha.</p>
-        <br>
-        <div>
-            <p>Obrigado!</p>
-        </div>
-    </div>
+<body bgcolor="#ffffff">
+    <table bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0" width="580">
+        <tbody>
+            <tr>
+                <td colspan="3">
+                    <img src="https://i.ibb.co/8mQDndC/cabecalho.png" alt="cabecalho" border="0">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+
+                </td>
+            </tr>
+            <tr>
+                <td style="color: #444545; font-family: Arial, Helvetica, sans-serif; font-size: 16px">
+                    <p style="line-height: 22px; margin-left: 60px">
+                        Olá <b>{{name}},</b> sua senha foi redefinida com sucesso.
+                    </p>
+                    <p style="line-height: 22px ; margin-left: 75px">
+                        Você já pode fazer login utilizando a nova senha.
+                        <br>
+                        <br>
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
