--- a/data/relatorio-de-funcionario/content.handlebars
+++ b/data/relatorio-de-funcionario/content.handlebars
@@ -59,6 +59,7 @@
                 <br />
                 <br />
                 {{#each enderecos}}
+                {{#if ENDERECO.ENDERECO}}
                 <div class="row">
                     <div class="col">
                         <strong>Endereço: </strong> {{ENDERECO.ENDERECO}}
@@ -90,17 +91,19 @@
                     </div>
                     {{/if}}
                 </div>
+                {{/if}}
                 {{/each}}
                 <br />
                 <br />
+                {{#each telefones}}
+                {{#if TELEFONE.NUMERO}}
                 <div class="row">
                     <div class="col">
-                        <strong>Telefone: </strong> (16) 32630701
-                    </div>
-                    <div class="col">
-                        <strong>Telefone: </strong> (16) 996095737
+                        <strong>Telefone: </strong> ({{TELEFONE.DDD}}) {{TELEFONE.NUMERO}}
                     </div>
                 </div>
+                {{/if}}
+                {{/each}}
                 <br />
                 <br />
                 <div class="row">
