--- a/data/relatorio-de-funcionario/content.handlebars
+++ b/data/relatorio-de-funcionario/content.handlebars
@@ -108,71 +108,81 @@
                 <br />
                 <div class="row">
                     <div class="col">
-                        <strong>Cargo: </strong> Suporte
+                        <strong>Cargo: </strong> {{funcionario.CARGO}}
                     </div>
                     <div class="col">
-                        <strong>Data de admissão: </strong> 08/03/2019
+                        <strong>Data de admissão: </strong> {{dataNascimento funcionario.DATA_ADMISSAO}}
                     </div>
+                    {{#if funcionario.DATA_DEMISSAO}}
                     <div class="col">
-                        <strong>Data de demissão: </strong> 23/04/2019
+                        <strong>Data de demissão: </strong> {{dataNascimento funcionario.DATA_DEMISSAO}}
                     </div>
+                    {{/if}}
                 </div>
             </div>
         </div>
         <br />
         <br />
+        {{#if dependentes}}
         <div class="container" style="text-align: center; font-size: 25px">
             <div class="box box-default">
                 <div class="box-header">
                     <h3 class="box-title" style="font-size: 35px">Dependentes</h3>
                     <hr class="col-6">
                 </div>
+                {{#each dependentes}}
                 <div class="box-body" style="text-align: center">
                     <div class="row">
                         <div class="col">
-                            <strong>Nome: </strong> Caba Cabalero
+                            <strong>Nome: </strong> {{NOME}} {{SOBRENOME}}
                         </div>
                         <div class="col">
-                            <strong>CPF: </strong> 256.652.365-52
+                            <strong>CPF: </strong> {{cpf CPF}}
                         </div>
                         <div class="col">
-                            <strong>RG: </strong> 32.544.652-5
+                            <strong>RG: </strong> {{rg RG}}
                         </div>
                     </div>
                     <br />
                     <br />
                     <div class="row">
                         <div class="col">
-                            <strong>Data de nascimento: </strong> 05/05/2010
+                            <strong>Data de nascimento: </strong> {{dataNascimento DATA_NASCIMENTO}}
                         </div>
                     </div>
                     <br />
+                    {{#if NUMERO_CERTIDAO_NASCIMENTO}}
                     <h4 style="text-align: center">Certidão de nascimento</h4>
                     <hr class="col-1">
                     <div class="row">
                         <div class="col">
-                            <strong>Nº: </strong> 5616541
+                            <strong>Nº: </strong> {{NUMERO_CERTIDAO_NASCIMENTO}}
                         </div>
                         <div class="col">
-                            <strong>Folha: </strong> 12
+                            <strong>Folha: </strong> {{FOLHA_CERTIDAO_NASCIMENTO}}
                         </div>
                         <div class="col">
-                            <strong>Livro: </strong> 3AB
+                            <strong>Livro: </strong> {{LIVRO_CERTIDAO_NASCIMENTO}}
                         </div>
                     </div>
                     <br />
                     <br />
                     <div class="row">
                         <div class="col">
-                            <strong>Cidade: </strong> Araraquara
+                            <strong>Cidade: </strong> {{CIDADE_CERTIDAO_NASCIMENTO}}
                         </div>
                         <div class="col">
-                            <strong>Estado: </strong> SP
+                            <strong>Estado: </strong> {{ESTADO_CERTIDAO_NASCIMENTO}}
                         </div>
                     </div>
+                    {{/if}}
                 </div>
+                <br/>
+                <hr class="col-3">
+                {{/each}}
             </div>
         </div>
+        {{/if}}
     </div>
 
 </body>
