--- a/reports/templates/relatorio-de-funcionarios.html
+++ b/reports/templates/relatorio-de-funcionarios.html
@@ -3,12 +3,13 @@
 
 <head>
     <title>Relatório de funcionários</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body>
-    <h1 class="display-4" style="margin-top: 10px; margin-bottom: 6px; font-size: 46; text-align: center">Relatório de funcionários</h1>
-    <table class="table table-striped">
+    <h1 class="display-4" style="margin-bottom: 6px; text-align: center; font-size: 30">Relatório de
+        funcionários</h1>
+    <table class="table">
         <thead>
             <tr class="table-success">
                 <th scope="col">Nome</th>
@@ -22,12 +23,12 @@
         <tbody>
             {{#each funcionarios}}
             <tr>
-                <td>{{NOME}} {{SOBRENOME}}</td>
-                <td>{{RG}}</td>
-                <td>{{CPF}}</td>
-                <td>{{DATA_NASCIMENTO}}</td>
-                <td>{{CARGO}}</td>
-                <td>{{DATA_ADMISSAO}}</td>
+                <td>{{this.NOME}} {{this.SOBRENOME}}</td>
+                <td>{{this.RG}}</td>
+                <td>{{this.CPF}}</td>
+                <td>{{this.DATA_NASCIMENTO}}</td>
+                <td>{{this.CARGO}}</td>
+                <td>{{this.DATA_ADMISSAO}}</td>
             </tr>
             {{/each}}
         </tbody>
