--- a/reports/templates/residentes.hbs
+++ b/reports/templates/residentes.hbs
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
 
 <head>
-    <title>Relatório de Funcionários</title>
+    <title>Relatório de residentes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
-    <h4 style="margin-top: 10px; margin-bottom: 6px; text-align: center;">Relatório de funcionários</h4>
+    <h4 style="margin-top: 10px; margin-bottom: 6px; text-align:center">Relatório de
+        residentes</h4>
     <table class="striped">
         <thead>
             <tr>
                 <th>Nome</th>
-                <th>RG</th>
-                <th>CPF</th>
-                <th>Data de Nascimento</th>
-                <th>Cargo</th>
-                <th>Data de Admissão</th>
+                <th>Data de nascimento</th>
+                <th>Apelido</th>
+                <th>Data de acolhimento</th>
             </tr>
         </thead>
         <tbody>
-            {{#each funcionarios}}
+            {{#each residentes}}
             <tr>
                 <td>{{NOME}} {{SOBRENOME}}</td>
-                <td>{{RG}}</td>
-                <td>{{CPF}}</td>
                 <td>{{DATA_NASCIMENTO}}</td>
-                <td>{{CARGO}}</td>
-                <td>{{DATA_ADMISSAO}}</td>
+                <td>{{APELIDO}}</td>
+                <td>{{DATA_ACOLHIMENTO}}</td>
             </tr>
             {{/each}}
         </tbody>
