--- a/reports/templates/acompanhamento.hbs
+++ b/reports/templates/acompanhamento.hbs
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Relatório de acompanhamento</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
@@ -20,7 +24,7 @@
                 <div class="row">
                     <div class="col">
                         <strong>Data do acompanhamento: </strong>
-                        {{dataAcompanhamento acompanhamento.DATA_ACOMPANHAMENTO}}
+                        {{acompanhamento.DATA_ACOMPANHAMENTO}}
                     </div>
                 </div>
                 <br />
