Ajuste no template do relatório de residente

--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -273,13 +273,11 @@
                         <strong>Parentesco: </strong> {{this.FAMILIAR.PARENTESCO}}
                     </div>
                 </div>
-                <br/>
+                <br />
                 <div class="row">
                     <div class="col">
-                        <strong>DDD: </strong> {{this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.DDD}}
-                    </div>
-                    <div class="col">
-                        <strong>Telefone: </strong> {{this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.NUMERO}}
+                        <strong>Telefone: </strong> {{this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.DDD}}
+                        {{this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.NUMERO}}
                     </div>
                 </div>
                 <br />
