--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -32,7 +32,7 @@
                         <strong>CPF: </strong> {{cpf pessoa.CPF}}
                     </div>
                     <div class="col">
-                        <strong>RG: </strong> {{pessoa.RG}}
+                        <strong>RG: </strong> {{rg pessoa.RG}}
                     </div>
                 </div>
                 <br />
