--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -42,7 +42,7 @@
                         <strong>Data de nascimento: </strong> {{pessoa.DATA_NASCIMENTO}}
                     </div>
                     <div class="col">
-                        <strong>Escolaridade: </strong> {{pessoa.ESCOLARIDADE}}
+                        <strong>Escolaridade: </strong> {{escolaridade pessoa.ESCOLARIDADE}}
                     </div>
                 </div>
                 <br />
