--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -49,7 +49,7 @@
                 <br />
                 <div class="row">
                     <div class="col">
-                        <strong>Sexo: </strong> {{pessoa.SEXO}}
+                        <strong>Sexo: </strong> {{sexo pessoa.SEXO}}
                     </div>
                     <div class="col">
                         <strong>Estado civil: </strong> {{pessoa.ESTADO_CIVIL}}
