Helper estado civil

--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -52,7 +52,7 @@
                         <strong>Sexo: </strong> {{sexo pessoa.SEXO}}
                     </div>
                     <div class="col">
-                        <strong>Estado civil: </strong> {{pessoa.ESTADO_CIVIL}}
+                        <strong>Estado civil: </strong> {{estado_civil pessoa.ESTADO_CIVIL}}
                     </div>
                     <div class="col">
                         <strong>Religião: </strong> {{pessoa.RELIGIAO}}
