--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -55,7 +55,7 @@
                         <strong>Estado civil: </strong> {{estado_civil pessoa.ESTADO_CIVIL}}
                     </div>
                     <div class="col">
-                        <strong>Religião: </strong> {{pessoa.RELIGIAO}}
+                        <strong>Religião: </strong> {{religiao pessoa.RELIGIAO}}
                     </div>
                 </div>
                 <br />
