Helper situação inss

--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -121,7 +121,7 @@
                         <strong>Número: </strong> {{residente.NUMERO_INSS}}
                     </div>
                     <div class="col">
-                        <strong>Situação: </strong> {{residente.SITUACAO_INSS}}
+                        <strong>Situação: </strong> {{situacao_inss residente.SITUACAO_INSS}}
                     </div>
                 </div>
                 <br />
