--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -277,7 +277,7 @@
                 <div class="row">
                     <div class="col">
                         <strong>Telefone: </strong> {{this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.DDD}}
-                        {{this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.NUMERO}}
+                        {{telefone this.FAMILIAR.TELEFONE_FAMILIAR.TELEFONE.NUMERO}}
                     </div>
                 </div>
                 <br />
