--- a/reports/templates/residente.hbs
+++ b/reports/templates/residente.hbs
@@ -309,7 +309,7 @@
                         <strong>UF: </strong> {{this.FAMILIAR.ENDERECO_FAMILIAR.ENDERECO.ESTADO}}
                     </div>
                     <div class="col">
-                        <strong>CEP: </strong> {{this.FAMILIAR.ENDERECO_FAMILIAR.ENDERECO.CEP}}
+                        <strong>CEP: </strong> {{cep this.FAMILIAR.ENDERECO_FAMILIAR.ENDERECO.CEP}}
                     </div>
                     {{#if this.FAMILIAR.ENDERECO_FAMILIAR.ENDERECO.REFERENCIA}}
                     <div class="col">
