Fixes em report_id / Adicionando helper ao formulario

--- a/reports/templates/funcionario.hbs
+++ b/reports/templates/funcionario.hbs
@@ -27,10 +27,10 @@
                         <strong>Nome: </strong> {{pessoa.NOME}} {{pessoa.SOBRENOME}}
                     </div>
                     <div class="col">
-                        <strong>CPF: </strong> {{pessoa.CPF}}
+                        <strong>CPF: </strong> {{cpf pessoa.CPF}}
                     </div>
                     <div class="col">
-                        <strong>RG: </strong> {{pessoa.RG}}
+                        <strong>RG: </strong> {{rg pessoa.RG}}
                     </div>
                 </div>
                 <br />
@@ -40,7 +40,7 @@
                         <strong>Data de nascimento: </strong> {{pessoa.DATA_NASCIMENTO}}
                     </div>
                     <div class="col">
-                        <strong>Escolaridade: </strong> {{pessoa.ESCOLARIDADE}}
+                        <strong>Escolaridade: </strong> {{escolaridade pessoa.ESCOLARIDADE}}
                     </div>
                 </div>
                 <br />
@@ -50,10 +50,10 @@
                         <strong>Sexo: </strong> {{sexo pessoa.SEXO}}
                     </div>
                     <div class="col">
-                        <strong>Estado civil: </strong> {{pessoa.ESTADO_CIVIL}}
+                        <strong>Estado civil: </strong> {{estado_civil pessoa.ESTADO_CIVIL}}
                     </div>
                     <div class="col">
-                        <strong>Religião: </strong> {{pessoa.RELIGIAO}}
+                        <strong>Religião: </strong> {{religiao pessoa.RELIGIAO}}
                     </div>
                 </div>
                 <br />
